# mlops-experiment

./: README.md  pyproject.toml
mlruns/0/: meta.yaml
mlruns/0/0f18d68f3f0641c6a24235005984b2dd/: meta.yaml
mlruns/0/0f18d68f3f0641c6a24235005984b2dd/tags/: mlflow.runName
mlruns/0/datasets/8fa69cb2624895109399e1c2c30b910d/: meta.yaml
mlruns/0/models/m-1fb6c72b4fa74327a19e4014f42cf527/: meta.yaml
mlruns/315006879522392442/: meta.yaml
mlruns/315006879522392442/390a81cb462e47bb81b3f929a54aad2b/: meta.yaml
mlruns/315006879522392442/390a81cb462e47bb81b3f929a54aad2b/metrics/: training_accuracy_score  training_f1_score  training_log_loss  training_precision_score  training_roc_auc  training_score
mlruns/315006879522392442/390a81cb462e47bb81b3f929a54aad2b/tags/: mlflow.runName
mlruns/315006879522392442/48a668e7a1b944a0b91b36d70a1b95a1/: meta.yaml
mlruns/315006879522392442/48a668e7a1b944a0b91b36d70a1b95a1/metrics/: training_f1_score  training_log_loss  training_precision_score  training_recall_score  training_roc_auc  training_score
mlruns/315006879522392442/48a668e7a1b944a0b91b36d70a1b95a1/tags/: mlflow.runName
notebooks/: baseline_model.py  handling_imbalanced_data.py  preprocessing.py  tfidf_max_features.py  vectorization.py  xgboost_with_hpt.py
notebooks/__marimo__/session/: a.py.json  baseline_model.py.json  handling_imbalanced_data.py.json  marimo.py.json  preprocessing.py.json  tfidf_max_features.py.json  vectorization.py.json  xgboost_with_hdp.py.json  xgboost_with_hpt.py.json
src/: main.py
(+20 files in other folders)
