[project]
name = "some-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.14.0",
    "marimo[recommended]>=0.18.2",
    "matplotlib>=3.10.7",
    "mflow>=1.3.1",
    "mlflow>=3.6.0",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
